{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 278,
  "lineage": "4b3bd222-f7ee-a474-6a01-558ff052dc69",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181748507505:internet-gateway/igw-0790f8609ba77e63e",
            "id": "igw-0790f8609ba77e63e",
            "owner_id": "181748507505",
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "vpc_id": "vpc-057fdf617771d978d"
          },
          "dependencies": [
            "aws_vpc.terratest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0d8c8aa6814e94b21",
            "network_interface_id": "eni-0297c224d6df5d32c",
            "private_ip": "10.10.1.56",
            "subnet_id": "subnet-0d0a6f3e372966846"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.terratest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "terratestacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181748507505:network-acl/acl-0163761e9c341f86e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-0163761e9c341f86e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "181748507505",
            "subnet_ids": [],
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "vpc_id": "vpc-057fdf617771d978d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terratest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181748507505:route-table/rtb-0c29c7354d5f9afe1",
            "id": "rtb-0c29c7354d5f9afe1",
            "owner_id": "181748507505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8c8aa6814e94b21",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-057fdf617771d978d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_vpc.terratest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181748507505:route-table/rtb-00e18286abf5b6803",
            "id": "rtb-00e18286abf5b6803",
            "owner_id": "181748507505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0790f8609ba77e63e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-057fdf617771d978d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_gateway",
            "aws_vpc.terratest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015716611edecf9b5",
            "route_table_id": "rtb-0c29c7354d5f9afe1",
            "subnet_id": "subnet-0d0a6f3e372966846"
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.terratest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02366dec926b6189f",
            "route_table_id": "rtb-00e18286abf5b6803",
            "subnet_id": "subnet-042470a73fa2e1858"
          },
          "dependencies": [
            "aws_internet_gateway.igw_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.terratest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181748507505:security-group/sg-089974c4df9cd559f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089974c4df9cd559f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "security_group",
            "name_prefix": "",
            "owner_id": "181748507505",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-057fdf617771d978d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terratest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181748507505:subnet/subnet-0d0a6f3e372966846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0d0a6f3e372966846",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "181748507505",
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "vpc_id": "vpc-057fdf617771d978d"
          },
          "dependencies": [
            "aws_vpc.terratest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181748507505:subnet/subnet-042470a73fa2e1858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-042470a73fa2e1858",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "181748507505",
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "vpc_id": "vpc-057fdf617771d978d"
          },
          "dependencies": [
            "aws_vpc.terratest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terratest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181748507505:vpc/vpc-057fdf617771d978d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-07669a94e016d0a1f",
            "default_route_table_id": "rtb-09b6d6db885872dc2",
            "default_security_group_id": "sg-04bf30d34458a54fe",
            "dhcp_options_id": "dopt-01b813ab1e178f6e3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-057fdf617771d978d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b6d6db885872dc2",
            "owner_id": "181748507505",
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            }
          }
        }
      ]
    }
  ]
}